welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value abs
  if(abs(100 - n) <= 10 || abs(200 - n) <= 10)
     ^nearHundred:2: error: not found: value abs
  if(abs(100 - n) <= 10 || abs(200 - n) <= 10)
                           ^