welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if(abs(100 - n) <= 10 || abs(200 - n) <= 10)
 		return true
  else
 		return false
}